{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 278,
  "lineage": "3e10d6c1-7c58-6d17-df94-784e8fc42b49",
  "resources": [
    {
      "mode": "data",
      "type": "aws_elb",
      "name": "netology-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:375211577735:loadbalancer/netology-elb",
            "availability_zones": [
              "us-west-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "netology-elb-1592254470.us-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 15,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "netology-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0032f9e8cfede1d31",
              "i-03c927e904ffc1123",
              "i-0e57096868150c402"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "netology-elb",
            "security_groups": [
              "sg-0cc2213fff94d5f03"
            ],
            "source_security_group": "375211577735/netology-sg",
            "source_security_group_id": "sg-0cc2213fff94d5f03",
            "subnets": [
              "subnet-04aa32312e3e30a42"
            ],
            "tags": {
              "Name": "netology-elb"
            },
            "zone_id": "Z368ELLRRE2KJ0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-4a48824f",
            "network_border_group": "us-west-1",
            "private_dns": "ip-172-31-70-251.us-west-1.compute.internal",
            "public_dns": "ec2-54-177-125-192.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.125.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bc53464e5b4c2f7d",
            "domain": "vpc",
            "id": "eipalloc-5733f952",
            "network_border_group": "us-west-1",
            "network_interface": "eni-092dc5f26d6f3a5e1",
            "private_dns": "ip-172-31-61-198.us-west-1.compute.internal",
            "private_ip": "172.31.61.198",
            "public_dns": "ec2-54-177-220-83.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.220.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "netology-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:375211577735:loadbalancer/netology-elb",
            "availability_zones": [
              "us-west-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "netology-elb-1592254470.us-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 15,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "netology-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0032f9e8cfede1d31",
              "i-03c927e904ffc1123",
              "i-0e57096868150c402"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "netology-elb",
            "security_groups": [
              "sg-0cc2213fff94d5f03"
            ],
            "source_security_group": "375211577735/netology-sg",
            "source_security_group_id": "sg-0cc2213fff94d5f03",
            "subnets": [
              "subnet-04aa32312e3e30a42"
            ],
            "tags": {
              "Name": "netology-elb"
            },
            "tags_all": {
              "Name": "netology-elb"
            },
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netology-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375211577735:internet-gateway/igw-03551acbfd8616c84",
            "id": "igw-03551acbfd8616c84",
            "owner_id": "375211577735",
            "tags": {
              "Name": "netology-gw"
            },
            "tags_all": {
              "Name": "netology-gw"
            },
            "vpc_id": "vpc-0c40a0087fa059b13"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "netology-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-5733f952",
            "connectivity_type": "public",
            "id": "nat-0ba4d41e89f8d477e",
            "network_interface_id": "eni-092dc5f26d6f3a5e1",
            "private_ip": "172.31.61.198",
            "public_ip": "54.177.220.83",
            "subnet_id": "subnet-04aa32312e3e30a42",
            "tags": {
              "Name": "netology-nat-gw"
            },
            "tags_all": {
              "Name": "netology-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375211577735:route-table/rtb-008e3eede7490e965",
            "id": "rtb-008e3eede7490e965",
            "owner_id": "375211577735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ba4d41e89f8d477e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route"
            },
            "tags_all": {
              "Name": "private-route"
            },
            "vpc_id": "vpc-0c40a0087fa059b13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.netology-nat-gw",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375211577735:route-table/rtb-05a2e686b84152461",
            "id": "rtb-05a2e686b84152461",
            "owner_id": "375211577735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03551acbfd8616c84",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "vpc_id": "vpc-0c40a0087fa059b13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc",
            "aws_internet_gateway.netology-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rtassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e9d931b71abaaa1",
            "route_table_id": "rtb-05a2e686b84152461",
            "subnet_id": "subnet-04aa32312e3e30a42"
          },
          "dependencies": [
            "aws_internet_gateway.netology-gw",
            "aws_route_table.public-route",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rtassoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4816c176da4d9da",
            "route_table_id": "rtb-008e3eede7490e965",
            "subnet_id": "subnet-08a5dceda7c70e769"
          },
          "dependencies": [
            "aws_route_table.private-route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.netology-vpc",
            "aws_eip.nat_gateway",
            "aws_nat_gateway.netology-nat-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netology-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375211577735:security-group/sg-0cc2213fff94d5f03",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc2213fff94d5f03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "netology-sg",
            "name_prefix": "",
            "owner_id": "375211577735",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c40a0087fa059b13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375211577735:security-group/sg-0d2a1512afbcfa983",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2a1512afbcfa983",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpn-netology-sg",
            "name_prefix": "",
            "owner_id": "375211577735",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c40a0087fa059b13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-670939302",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc2213fff94d5f03",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": -1,
            "id": "sgrule-3133176171",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0cc2213fff94d5f03",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2440553747",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc2213fff94d5f03",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375211577735:subnet/subnet-08a5dceda7c70e769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.31.64.0/19",
            "id": "subnet-08a5dceda7c70e769",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375211577735",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0c40a0087fa059b13"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375211577735:subnet/subnet-04aa32312e3e30a42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.31.32.0/19",
            "id": "subnet-04aa32312e3e30a42",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375211577735",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0c40a0087fa059b13"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netology-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375211577735:vpc/vpc-0c40a0087fa059b13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0cfd6dfe24a6f0a44",
            "default_route_table_id": "rtb-05044ac1a0d24ce7d",
            "default_security_group_id": "sg-0eae941d105184ac0",
            "dhcp_options_id": "dopt-2d14ce4b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c40a0087fa059b13",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05044ac1a0d24ce7d",
            "owner_id": "375211577735",
            "tags": {
              "Name": "netology-vpc"
            },
            "tags_all": {
              "Name": "netology-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}